--- a/AndroidProject/app/src/main/res/values/strings.xml
+++ b/AndroidProject/app/src/main/res/values/strings.xml
@@ -1,3 +1,24 @@
 <resources>
     <string name="app_name">Reservation</string>
+
+    <string-array name="nbPers">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+    </string-array>
+
+    <string-array name="joursNotif">
+        <item>1 jour avant</item>
+        <item>2 jour avant</item>
+        <item>3 jour avant</item>
+        <item>4 jour avant</item>
+        <item>5 jour avant</item>
+        <item>6 jour avant</item>
+        <item>Une semaine avant</item>
+    </string-array>
 </resources>
